# interior-flow-3d

./: .editorconfig  .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  packed_test.glb  packed_test_report.json  pnpm-lock.yaml  report.md
.claude/: PRD.md  settings.local.json
assets/: README.md
backend/: .dockerignore  .env.example  Dockerfile  mypy.ini  pyproject.toml  ruff.toml
backend/app/: config.py  deps.py  main.py
backend/app/data/: catalog.json  room_types.json  style_profiles.json  templates.json
backend/app/models/: catalog.py  layout.py  project.py  room.py  room_type.py  share.py  style_profile.py
backend/app/prompts/: system.md  system_pass1.md  system_pass2.md
backend/app/routers/: catalog.py  generate.py  layouts.py  projects.py  rooms.py  share.py  swap.py  templates.py
backend/app/services/: catalog_filter.py  llm.py  placement.py  room_types.py  share_tokens.py  slot_resolver.py  style_profiles.py  supabase.py  zones.py
backend/tests/: conftest.py  test_auth_deps.py  test_catalog_assets.py  test_catalog_filter.py  test_healthz.py  test_llm_mock.py  test_pipeline_combos.py  test_placement.py  test_resolver.py  test_resolver_room_types.py  test_rls_cross_user.py  test_room_types.py  test_routes_generate.py  test_routes_layouts.py  test_routes_layouts_variants.py  test_routes_projects.py  test_routes_rooms.py  test_routes_share.py  test_routes_swap.py  test_share_tokens.py  test_style_profiles.py  test_zones.py
docs/: demo-seeds.md
frontend/: .env.example  fix.js  package.json  pnpm-lock.yaml  tailwind.config.ts
(+133 files in other folders)
