[project]
name = "interior-flow-3d-backend"
version = "0.1.0"
description = "FastAPI backend for Interior Flow 3D"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "openai>=1.54",
    "pyjwt[crypto]>=2.9",
    "orjson>=3.10",
    "azure-identity>=1.25.3",
    "azure-storage-blob>=12.28.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff>=0.7",
    "mypy>=1.13",
    "types-pyjwt>=1.7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
package = false
